--- a/src/main/webapp/reservation/Edit.xhtml
+++ b/src/main/webapp/reservation/Edit.xhtml
@@ -26,7 +26,7 @@
                         <p:selectOneMenu id="clientid" value="#{reservationController.selected.clientid}" >
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{clientController.itemsAvailableSelectOne}"
-                                           var="clientidItem"
+                                           var="clientidItem" itemLabel="#{clientidItem.lastname}"
                                            itemValue="#{clientidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
